# qr

./: .env  Cargo.toml
src/: main.rs
static/: index.css  index.js
