[package]
name = "qr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qr"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace", "fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
qrcode = "0.14"
image = { version = "0.25", features = ["png"] }
base64 = "0.22"